feat: update favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/indupasa-logo.ico" />
+    <link rel="icon" href="/indupasa-app.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indupasa Reportes</title>
 </head>
